apps/longhorn/app.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-backend
  namespace: k2-storage
spec:
  ports:
    - name: manager
      port: 9500
      targetPort: manager
  selector:
    app: longhorn-manager
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-ui
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-frontend
  namespace: k2-storage
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: longhorn-ui
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-admission-webhook
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-admission-webhook
  namespace: k2-storage
spec:
  ports:
    - name: admission-webhook
      port: 9502
      targetPort: admission-wh
  selector:
    longhorn.io/admission-webhook: longhorn-admission-webhook
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: longhorn-recovery-backend
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-recovery-backend
  namespace: k2-storage
spec:
  ports:
    - name: recovery-backend
      port: 9503
      targetPort: recov-backend
  selector:
    longhorn.io/recovery-backend: longhorn-recovery-backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: longhorn-manager
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-manager
  namespace: k2-storage
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: v1.11.2
        helm.sh/chart: longhorn-1.11.2
    spec:
      containers:
        - command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - docker.io/longhornio/longhorn-engine:v1.11.2
            - --instance-manager-image
            - docker.io/longhornio/longhorn-instance-manager:v1.11.2
            - --share-manager-image
            - docker.io/longhornio/longhorn-share-manager:v1.11.2
            - --backing-image-manager-image
            - docker.io/longhornio/backing-image-manager:v1.11.2
            - --support-bundle-manager-image
            - docker.io/longhornio/support-bundle-kit:v0.0.84
            - --manager-image
            - docker.io/longhornio/longhorn-manager:v1.11.2
            - --service-account
            - longhorn-service-account
            - --upgrade-version-check
          image: docker.io/longhornio/longhorn-manager:v1.11.2
          imagePullPolicy: IfNotPresent
          name: longhorn-manager
          ports:
            - containerPort: 9500
              name: manager
            - containerPort: 9502
              name: admission-wh
            - containerPort: 9503
              name: recov-backend
          readinessProbe:
            httpGet:
              path: /v1/healthz
              port: 9502
              scheme: HTTPS
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /host/boot/
              name: boot
              readOnly: true
            - mountPath: /host/dev/
              name: dev
            - mountPath: /host/proc/
              name: proc
              readOnly: true
            - mountPath: /host/etc/
              name: etc
              readOnly: true
            - mountPath: /var/lib/longhorn/
              mountPropagation: Bidirectional
              name: longhorn
            - mountPath: /tls-files/
              name: longhorn-grpc-tls
        - command:
            - sh
            - -c
            - echo share-manager image pulled && sleep infinity
          image: docker.io/longhornio/longhorn-share-manager:v1.11.2
          imagePullPolicy: IfNotPresent
          name: pre-pull-share-manager-image
      priorityClassName: longhorn-critical
      serviceAccountName: longhorn-service-account
      volumes:
        - hostPath:
            path: /boot/
          name: boot
        - hostPath:
            path: /dev/
          name: dev
        - hostPath:
            path: /proc/
          name: proc
        - hostPath:
            path: /etc/
          name: etc
        - hostPath:
            path: /var/lib/longhorn/
          name: longhorn
        - name: longhorn-grpc-tls
          secret:
            optional: true
            secretName: longhorn-grpc-tls
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 100%
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-driver-deployer
  namespace: k2-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-driver-deployer
  template:
    metadata:
      labels:
        app: longhorn-driver-deployer
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: v1.11.2
        helm.sh/chart: longhorn-1.11.2
    spec:
      containers:
        - command:
            - longhorn-manager
            - -d
            - deploy-driver
            - --manager-image
            - docker.io/longhornio/longhorn-manager:v1.11.2
            - --manager-url
            - http://longhorn-backend:9500/v1
          image: docker.io/longhornio/longhorn-manager:v1.11.2
          imagePullPolicy: IfNotPresent
          name: longhorn-driver-deployer
      priorityClassName: longhorn-critical
      securityContext:
        runAsUser: 0
      serviceAccountName: longhorn-service-account
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: longhorn-ui
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-ui
  namespace: k2-storage
spec:
  replicas: 2
  selector:
    matchLabels:
      app: longhorn-ui
  template:
    metadata:
      labels:
        app: longhorn-ui
        app.kubernetes.io/instance: longhorn
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: longhorn
        app.kubernetes.io/version: v1.11.2
        helm.sh/chart: longhorn-1.11.2
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - longhorn-ui
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - env:
            - name: LONGHORN_MANAGER_IP
              value: http://longhorn-backend:9500
            - name: LONGHORN_UI_PORT
              value: "8000"
          image: docker.io/longhornio/longhorn-ui:v1.11.2
          imagePullPolicy: IfNotPresent
          name: longhorn-ui
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - mountPath: /var/cache/nginx/
              name: nginx-cache
            - mountPath: /var/config/nginx/
              name: nginx-config
            - mountPath: /var/run/
              name: var-run
      priorityClassName: longhorn-critical
      serviceAccountName: longhorn-ui-service-account
      volumes:
        - emptyDir: {}
          name: nginx-cache
        - emptyDir: {}
          name: nginx-config
        - emptyDir: {}
          name: var-run
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: auth-authelia@kubernetescrd
  labels:
    app: longhorn-ingress
    app.kubernetes.io/instance: longhorn
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/version: v1.11.2
    helm.sh/chart: longhorn-1.11.2
  name: longhorn-ingress
  namespace: k2-storage
spec:
  rules:
    - host: lh.wyvernzora.io
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
